@@ -16,6 +16,10 @@ bzr-svn 0.6.0					UNRELEASED
    * Support working copies with non-ascii characters in the 
      base path. (#356845)
 
+   * Fix handling of newlines in Bazaar revision properties round-tripped to 
+     Subversion file properties. (#360477)
+     
+
 bzr-svn 0.5.4					2009-04-08
 
   BUG FIXES
